# trading-skill

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.claude/skills/trade/: SKILL.md
config/: settings.py
config/strategies/: example_funding_rate.yaml  example_momentum.yaml
frontend/: package-lock.json
frontend/src/: App.tsx  api.ts  hooks.ts  index.css
frontend/src/pages/: Dashboard.tsx  Market.tsx  Strategies.tsx  Trades.tsx
scripts/: backfill_data.py  init_db.py  market.py  run_backtest.py  trade.py
src/: main.py
src/ai/: analyst.py  decision.py  memory.py  prompts.py
src/api/: chat.py  server.py
src/api/routes/: market.py  monitor.py  strategy.py  trading.py
src/backtest/: data_loader.py  engine.py  report.py
src/data/: binance_coinm.py  binance_futures.py  binance_spot.py  collector.py  models.py  websocket_stream.py
src/execution/: binance_client.py  executor.py  order_manager.py  position_manager.py
src/monitor/: alerts.py  dashboard.py  logger.py  metrics.py
src/risk/: circuit_breaker.py  position_sizer.py  risk_manager.py  stop_loss.py
src/scanner/: filters.py  ranking.py  screener.py
src/storage/: database.py  repo_funding.py  repo_kline.py  repo_signals.py  repo_ticker.py  repo_trades.py
src/strategy/: base.py  engine.py  indicators.py  loader.py
src/strategy/builtin/: breakout.py  funding_arb.py  mean_reversion.py  (+1 more)
tests/: conftest.py  test_ai.py  test_api.py  test_backtest.py  test_collector.py  test_executor.py  test_indicators.py  test_risk.py  test_screener.py  test_strategy.py
