[project]
name = "trading-bot"
version = "0.1.0"
description = "AI-powered cryptocurrency trading bot with Binance integration"
requires-python = ">=3.9"

dependencies = [
    # Core
    "httpx>=0.27",
    "websockets>=12.0",
    "apscheduler>=3.10",

    # Data
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "pandas>=2.2",
    "numpy>=1.26",
    "ta>=0.11",

    # AI
    "anthropic>=0.40",

    # API
    "fastapi>=0.115",
    "uvicorn>=0.32",

    # Utils
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "rich>=13.0",

    # Alerts
    "python-telegram-bot>=21",
    "aiohttp>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
